@@ -1,0 +1,263 @@
+<?xml version="1.0"?>
+<migrations>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Application.Application.OpenDocumentFile</oldName>
+    <newName>Rhythm.Revit.Application.Applications.OpenDocumentFile</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Application.Document.CopyElementsFromLinkedDocument</oldName>
+    <newName>Rhythm.Revit.Application.Documents.CopyElementsFromLinkedDocument</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Application.Document.CopyElementsFromDocument</oldName>
+    <newName>Rhythm.Revit.Application.Documents.CopyElementsFromDocument</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Application.Document.SetStartingView</oldName>
+    <newName>Rhythm.Revit.Application.Documents.SetStartingView</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Application.Document.CopyDraftingViewsFromDocument</oldName>
+    <newName>Rhythm.Revit.Application.Documents.CopyDraftingViewsFromDocument</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Application.Document.MatchView</oldName>
+    <newName>Rhythm.Revit.Application.Documents.MatchView</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Area.Boundaries</oldName>
+    <newName>Rhythm.Revit.Elements.Areas.Boundaries</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Area.Solid</oldName>
+    <newName>Rhythm.Revit.Elements.Areas.Solid</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Area.GetAreaAtPoint</oldName>
+    <newName>Rhythm.Revit.Elements.Areas.GetAreaAtPoint</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Area.OuterBoundary</oldName>
+    <newName>Rhythm.Revit.Elements.Areas.OuterBoundary</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Category.ProjectionLineweight</oldName>
+    <newName>Rhythm.Revit.Elements.Categories.ProjectionLineweight</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Category.CutLineweight</oldName>
+    <newName>Rhythm.Revit.Elements.Categories.CutLineweight</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Category.LineColor</oldName>
+    <newName>Rhythm.Revit.Elements.Categories.LineColor</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Category.LinePattern</oldName>
+    <newName>Rhythm.Revit.Elements.Categories.LinePattern</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Category.Material</oldName>
+    <newName>Rhythm.Revit.Elements.Categories.Material</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.GetCurve</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.GetCurve</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.Segments</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.Segments</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.SetAboveValue</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.SetAboveValue</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.SetBelowValue</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.SetBelowValue</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.CenterTextOnLine</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.CenterTextOnLine</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.SetTextLocation</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.SetTextLocation</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.NumberOfSegments</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.NumberOfSegments</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.Origin</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.Origin</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.TextPosition</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.TextPosition</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.ValueString</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.ValueString</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.AboveValue</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.AboveValue</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.BelowValue</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.BelowValue</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Dimension.DisplayValueString</oldName>
+    <newName>Rhythm.Revit.Elements.Dimensions.DisplayValueString</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.DimensionType.UsesProjectSettings</oldName>
+    <newName>Rhythm.Revit.Elements.DimensionTypes.UsesProjectSettings</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.CreateParts</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.CreateParts</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.GetParameterValueByNameTypeOrInstance</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.GetParameterValueByNameTypeOrInstance</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.SetParameterByNameTypeOrInstance</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.SetParameterByNameTypeOrInstance</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.GetParameterByNameInDocument</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.GetParameterByNameInDocument</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.GetIntersectingElementsOfCategory</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.GetIntersectingElementsOfCategory</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.GetParameterValueByNameCaSeiNSeNSiTiVe</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.GetParameterValueByNameCaSeiNSeNSiTiVe</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.SetParameterValueByNameCaSeiNSeNSiTiVe</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.SetParameterValueByNameCaSeiNSeNSiTiVe</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.GetIntersectingElementsOfCategoryLinkOption</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.GetIntersectingElementsOfCategoryLinkOption</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.IsHiddenInView</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.IsHiddenInView</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.DependentElements</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.DependentElements</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.DependentElementsOfCategory</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.DependentElementsOfCategory</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.JoinedElements</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.JoinedElements</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.SetPinnedStatus</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.SetPinnedStatus</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Element.AreaLocation</oldName>
+    <newName>Rhythm.Revit.Elements.Elements.AreaLocation</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.FamilyInstance.Room</oldName>
+    <newName>Rhythm.Revit.Elements.FamilyInstances.Room</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.FamilyInstance.Space</oldName>
+    <newName>Rhythm.Revit.Elements.FamilyInstances.Space</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.FamilyInstance.RetrieveNestedComponents</oldName>
+    <newName>Rhythm.Revit.Elements.FamilyInstances.RetrieveNestedComponents</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.FamilyInstance.ByRoom</oldName>
+    <newName>Rhythm.Revit.Elements.FamilyInstances.ByRoom</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Grid.GetLeaderEnds</oldName>
+    <newName>Rhythm.Revit.Elements.Grids.GetLeaderEnds</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.ReferencePlane.GetCurvesInView</oldName>
+    <newName>Rhythm.Revit.Elements.ReferencePlanes.GetCurvesInView</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Roof.AddSplitLineWithElevation</oldName>
+    <newName>Rhythm.Revit.Elements.Roofs.AddSplitLineWithElevation</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Roof.AddPoint</oldName>
+    <newName>Rhythm.Revit.Elements.Roofs.AddPoint</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Room.CenterRoom</oldName>
+    <newName>Rhythm.Revit.Elements.Rooms.CenterRoom</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Room.CenterRoom2</oldName>
+    <newName>Rhythm.Revit.Elements.Rooms.CenterRoom2</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Room.IntersectingElementsInRoom</oldName>
+    <newName>Rhythm.Revit.Elements.Rooms.IntersectingElementsInRoom</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Room.IntersectWithCurve</oldName>
+    <newName>Rhythm.Revit.Elements.Rooms.IntersectWithCurve</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Tag.GetHeadPosition</oldName>
+    <newName>Rhythm.Revit.Elements.Tags.GetHeadPosition</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Tag.GetLeaderEnd</oldName>
+    <newName>Rhythm.Revit.Elements.Tags.GetLeaderEnd</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Tag.GetLeaderElbow</oldName>
+    <newName>Rhythm.Revit.Elements.Tags.GetLeaderElbow</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Tag.SetLeaderEndPosition</oldName>
+    <newName>Rhythm.Revit.Elements.Tags.SetLeaderEndPosition</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Tag.SetHeadPosition</oldName>
+    <newName>Rhythm.Revit.Elements.Tags.SetHeadPosition</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Tag.SetLeaderElbowPosition</oldName>
+    <newName>Rhythm.Revit.Elements.Tags.SetLeaderElbowPosition</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.TextNote.ToUpper</oldName>
+    <newName>Rhythm.Revit.Elements.TextNotes.ToUpper</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.TextNote.ToLower</oldName>
+    <newName>Rhythm.Revit.Elements.TextNotes.ToLower</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Wall.HasEditedProfile</oldName>
+    <newName>Rhythm.Revit.Elements.Walls.HasEditedProfile</newName>
+  </priorNameHint>
+  <priorNameHint>
+    <oldName>Rhythm.Revit.Elements.Wall.EditedProfile</oldName>
+    <newName>Rhythm.Revit.Elements.Walls.EditedProfile</newName>
+  </priorNameHint>
+</migrations>
